force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_heup_revisie_cup_ongecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Type_heup_revisie_cup_ongecementeerd__c</fullName>
    <description>Kies het type ongecementeerde cup voor de revisie heup.</description>
    <inlineHelpText>Kies het type ongecementeerde cupvoor de revisie heup.</inlineHelpText>
    <label>Type heup revisie cup ongecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_heup_revisie_cup_ongecementeerd__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Burchscheider</fullName>
            </value>
            <value>
                <fullName>ZCA Cage</fullName>
            </value>
            <value>
                <fullName>Ganz ring</fullName>
            </value>
            <value>
                <fullName>Muller roof ring</fullName>
            </value>
            <value>
                <fullName>TM modular</fullName>
            </value>
            <value>
                <fullName>Trilogy multi/cluster</fullName>
            </value>
            <value>
                <fullName>Allofit S</fullName>
            </value>
            <value>
                <fullName>TM revision</fullName>
            </value>
            <value>
                <fullName>Durom LDH</fullName>
            </value>
            <value>
                <fullName>Biomet revisie cup</fullName>
            </value>
            <value>
                <fullName>Eska AC</fullName>
            </value>
            <value>
                <fullName>Oblong</fullName>
            </value>
            <value>
                <fullName>Annanova</fullName>
            </value>
            <value>
                <fullName>Protusio cage</fullName>
            </value>
            <value>
                <fullName>S rom Oblong cup cage</fullName>
            </value>
            <value>
                <fullName>Ultima reinforcement ring</fullName>
            </value>
            <value>
                <fullName>Kerboull cross system</fullName>
            </value>
            <value>
                <fullName>Restoration gap cup</fullName>
            </value>
            <value>
                <fullName>Restoration gap ring</fullName>
            </value>
            <value>
                <fullName>Link Endo modell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>