force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_heup_revisie_steel_gecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Type_heup_revisie_steel_gecementeerd__c</fullName>
    <description>Kies het type gecementeerde steel voor de revisie heup.</description>
    <inlineHelpText>Kies het type gecementeerde steel voor de revisie heup.</inlineHelpText>
    <label>Type heup revisie steel gecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_heup_revisie_steel_gecementeerd__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>Kent hip</fullName>
            </value>
            <value>
                <fullName>CS steel</fullName>
            </value>
            <value>
                <fullName>CSL steel</fullName>
            </value>
            <value>
                <fullName>Exeter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>