force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_heup_revisie_steel_ongecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Type_heup_revisie_steel_ongecementeerd__c</fullName>
    <description>Kies het type ongecementeerde steel voor de revisie heup.</description>
    <inlineHelpText>Kies het type ongecementeerde steel voor de revisie heup.</inlineHelpText>
    <label>Type heup revisie steel ongecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_heup_revisie_steel_ongecementeerd__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Revitan</fullName>
            </value>
            <value>
                <fullName>ZMR</fullName>
            </value>
            <value>
                <fullName>Wagner</fullName>
            </value>
            <value>
                <fullName>Zweymüller SLL</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Mallory head calcar</fullName>
            </value>
            <value>
                <fullName>GHE</fullName>
            </value>
            <value>
                <fullName>S-Rom</fullName>
            </value>
            <value>
                <fullName>SLL</fullName>
            </value>
            <value>
                <fullName>Reach modular revision sytem</fullName>
            </value>
            <value>
                <fullName>LPS Limb preservation system</fullName>
            </value>
            <value>
                <fullName>P.F.R. Total hip system</fullName>
            </value>
            <value>
                <fullName>CBK Revisionsschaft</fullName>
            </value>
            <value>
                <fullName>Acumatch</fullName>
            </value>
            <value>
                <fullName>Restoration Modular</fullName>
            </value>
            <value>
                <fullName>Restoration HAC</fullName>
            </value>
            <value>
                <fullName>Link MP</fullName>
            </value>
            <value>
                <fullName>Profemur R</fullName>
            </value>
            <value>
                <fullName>Link MP reconstruction hip</fullName>
            </value>
            <value>
                <fullName>Modulaire revisiesteel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>