force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_knie_Patella_Femoraal__c.field-meta.xml
<CustomField>
    <fullName>Type_knie_Patella_Femoraal__c</fullName>
    <description>Kies het product dat het ziekenhuis gebruikt voor de PFJ knie.</description>
    <label>Type knie Patella Femoraal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_Knie_Patella_Femoraal__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer PFJ</fullName>
            </value>
            <value>
                <fullName>Vanguard PFJ</fullName>
            </value>
            <value>
                <fullName>LCS PFJ</fullName>
            </value>
            <value>
                <fullName>Journey PFJ</fullName>
            </value>
            <value>
                <fullName>Avon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>