force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_knie_primair_gecementeerd_CR__c.field-meta.xml
<CustomField>
    <fullName>Type_knie_primair_gecementeerd_CR__c</fullName>
    <description>Kies het type knie primair gecementeerd</description>
    <label>Type knie primair gecementeerd CR</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_knie_primair_gecementeerd_CR__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Innex</fullName>
            </value>
            <value>
                <fullName>NexGen</fullName>
            </value>
            <value>
                <fullName>AGC</fullName>
            </value>
            <value>
                <fullName>Vanguard</fullName>
            </value>
            <value>
                <fullName>ROC</fullName>
            </value>
            <value>
                <fullName>Maxim</fullName>
            </value>
            <value>
                <fullName>Ascent</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Rotaglide</fullName>
            </value>
            <value>
                <fullName>LCS</fullName>
            </value>
            <value>
                <fullName>PFC Sigma</fullName>
            </value>
            <value>
                <fullName>Multigen</fullName>
            </value>
            <value>
                <fullName>Balansys</fullName>
            </value>
            <value>
                <fullName>Optetrack</fullName>
            </value>
            <value>
                <fullName>Genesis II</fullName>
            </value>
            <value>
                <fullName>Profix</fullName>
            </value>
            <value>
                <fullName>Journey</fullName>
            </value>
            <value>
                <fullName>Deuce</fullName>
            </value>
            <value>
                <fullName>TC Plus</fullName>
            </value>
            <value>
                <fullName>Scorpio</fullName>
            </value>
            <value>
                <fullName>Triathlon</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Duracon</fullName>
            </value>
            <value>
                <fullName>Kinemax</fullName>
            </value>
            <value>
                <fullName>Arcys</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>