force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_knie_revisie__c.field-meta.xml
<CustomField>
    <fullName>Type_knie_revisie__c</fullName>
    <description>Kies het product dat het ziekenhuis gebruikt voor de revisie knie</description>
    <label>Type knie revisie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_knie_revisie__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>NexGen LCCK</fullName>
            </value>
            <value>
                <fullName>NexGen RHK</fullName>
            </value>
            <value>
                <fullName>Innex SC</fullName>
            </value>
            <value>
                <fullName>Vanguard SSK revision</fullName>
            </value>
            <value>
                <fullName>Maxim revision</fullName>
            </value>
            <value>
                <fullName>Ascent revision</fullName>
            </value>
            <value>
                <fullName>OSS segemental</fullName>
            </value>
            <value>
                <fullName>LCS revision</fullName>
            </value>
            <value>
                <fullName>S-rom hinge knee</fullName>
            </value>
            <value>
                <fullName>PFC sigma TC3</fullName>
            </value>
            <value>
                <fullName>Multigen revision</fullName>
            </value>
            <value>
                <fullName>Optetrak revision</fullName>
            </value>
            <value>
                <fullName>Legion revision</fullName>
            </value>
            <value>
                <fullName>TC Plus revision</fullName>
            </value>
            <value>
                <fullName>TR plus Hinge</fullName>
            </value>
            <value>
                <fullName>Scorpio TC revision</fullName>
            </value>
            <value>
                <fullName>GMRS segmental</fullName>
            </value>
            <value>
                <fullName>Duracon TC</fullName>
            </value>
            <value>
                <fullName>Advance revision</fullName>
            </value>
            <value>
                <fullName>Link endo model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>