force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_knie_uni_condylair__c.field-meta.xml
<CustomField>
    <fullName>Type_knie_uni_condylair__c</fullName>
    <description>Kies het product dat het ziekenhuis gebruikt voor de knie uni-condylair.</description>
    <label>Type knie uni-condylair</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_knie_primair_uni_condylair__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ZUK</fullName>
            </value>
            <value>
                <fullName>Allegretto</fullName>
            </value>
            <value>
                <fullName>NK II uni</fullName>
            </value>
            <value>
                <fullName>Oxford</fullName>
            </value>
            <value>
                <fullName>Vanguard uni</fullName>
            </value>
            <value>
                <fullName>Repicci</fullName>
            </value>
            <value>
                <fullName>Uni glide</fullName>
            </value>
            <value>
                <fullName>Preservation</fullName>
            </value>
            <value>
                <fullName>PFC sigma uni</fullName>
            </value>
            <value>
                <fullName>balanSys Uni</fullName>
            </value>
            <value>
                <fullName>Optetrak uni</fullName>
            </value>
            <value>
                <fullName>Accuris</fullName>
            </value>
            <value>
                <fullName>UC plus</fullName>
            </value>
            <value>
                <fullName>Triathon uni</fullName>
            </value>
            <value>
                <fullName>Elius</fullName>
            </value>
            <value>
                <fullName>Advance uni</fullName>
            </value>
            <value>
                <fullName>Mitus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>