force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_schouder_cuff__c.field-meta.xml
<CustomField>
    <fullName>Type_schouder_cuff__c</fullName>
    <description>Kies het type voor de schouder cuff.</description>
    <inlineHelpText>Kies het type voor de schouder cuff.</inlineHelpText>
    <label>Type schouder cuff</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_schouder_cuff__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ZCRP</fullName>
            </value>
            <value>
                <fullName>Nottingham</fullName>
            </value>
            <value>
                <fullName>CTA</fullName>
            </value>
            <value>
                <fullName>CRP (cuff matje)</fullName>
            </value>
            <value>
                <fullName>Aequalis</fullName>
            </value>
            <value>
                <fullName>Graftjacket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>