force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_schouder_fractuur__c.field-meta.xml
<CustomField>
    <fullName>Type_schouder_fractuur__c</fullName>
    <description>Kies het type voor schouder fractuur.</description>
    <inlineHelpText>Kies het type voor schouder fractuur.</inlineHelpText>
    <label>Type schouder fractuur</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_schouder_fractuur__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Anatomical fracture</fullName>
            </value>
            <value>
                <fullName>Bigliani fractuur</fullName>
            </value>
            <value>
                <fullName>Universe fracture stem</fullName>
            </value>
            <value>
                <fullName>Comprehensive FX stem</fullName>
            </value>
            <value>
                <fullName>Global FX</fullName>
            </value>
            <value>
                <fullName>Reversed/Fx</fullName>
            </value>
            <value>
                <fullName>Affinis</fullName>
            </value>
            <value>
                <fullName>Articula</fullName>
            </value>
            <value>
                <fullName>Promos</fullName>
            </value>
            <value>
                <fullName>Aequalis Fx</fullName>
            </value>
            <value>
                <fullName>Olympia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>