force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_schouder_gecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Type_schouder_gecementeerd__c</fullName>
    <description>Kies het type voor de gecementeerde schouder, primair en revisie.</description>
    <inlineHelpText>Kies het type voor de gecementeerde schouder, primair en revisie.</inlineHelpText>
    <label>Type schouder gecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_schouder_gecementeerd__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Anatomical</fullName>
            </value>
            <value>
                <fullName>Bigliani</fullName>
            </value>
            <value>
                <fullName>Universe Eclipse</fullName>
            </value>
            <value>
                <fullName>Nottinghem</fullName>
            </value>
            <value>
                <fullName>TESS/Bio modular</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>SMR/ shoulder</fullName>
            </value>
            <value>
                <fullName>Affinis</fullName>
            </value>
            <value>
                <fullName>Cofield</fullName>
            </value>
            <value>
                <fullName>Neer II</fullName>
            </value>
            <value>
                <fullName>Neer III</fullName>
            </value>
            <value>
                <fullName>EPOCA</fullName>
            </value>
            <value>
                <fullName>Aequalis</fullName>
            </value>
            <value>
                <fullName>Olympia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>