force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_schouder_reverse__c.field-meta.xml
<CustomField>
    <fullName>Type_schouder_reverse__c</fullName>
    <description>Kies het type voor schouder reverse.</description>
    <inlineHelpText>Kies het type voor schouder reverse.</inlineHelpText>
    <label>Type schouder reverse</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_schouder_reverse__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Anatomical inverse</fullName>
            </value>
            <value>
                <fullName>Bigliani inverse</fullName>
            </value>
            <value>
                <fullName>Modular</fullName>
            </value>
            <value>
                <fullName>TESS</fullName>
            </value>
            <value>
                <fullName>DeltaExtended</fullName>
            </value>
            <value>
                <fullName>Affinis</fullName>
            </value>
            <value>
                <fullName>Promos</fullName>
            </value>
            <value>
                <fullName>Aegualis rev.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>