force-app/main/default/objects/Profiel_ziekenhuis__c/fields/X2e_aantal_knie_PFJ__c.field-meta.xml
<CustomField>
    <fullName>X2e_aantal_knie_PFJ__c</fullName>
    <description>Vul het aantal stuks in dat op jaarbasis voor dit type knie wordt verbruikt.</description>
    <label>2e aantal knie PFJ</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>