force-app/main/default/objects/Profiel_ziekenhuis__c/fields/X2e_aantal_schouder_ongecementeerd__c.field-meta.xml
<CustomField>
    <fullName>X2e_aantal_schouder_ongecementeerd__c</fullName>
    <label>2e aantal schouder ongecementeerd</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>